Provided new portfolio link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 </head>
 
 <body>
+	<div class="updates">
+		<h2>
+			<a href="https://rahulsp-4601.github.io/RahulSP4601/#">
+				I've redesigned my portfolio to showcase my latest achievements, certifications, and research
+				publications. Feel free to explore it here.
+			</a>
+		</h2>
+
+	</div>
 	<div id="colorlib-page">
 		<div class="container-wrap">
 			<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar"
